Fix centering of call to action button on Safari

--- a/assets/css/imports/case.css
+++ b/assets/css/imports/case.css
@@ -316,6 +316,7 @@ body[data-layout="case"] {
     font-family: inherit;
     gap: .25em;
     margin-block: 1em;
+    margin-inline: auto;
     padding: .5em 1em;
     place-self: center;
     white-space: nowrap;
